aux_source_directory(src SRC_SUB)
aux_source_directory(. SRC_CUR)
add_executable(solver ${SRC_SUB} ${SRC_CUR})
include_directories(include)

find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()